--- a/mp2/db/mp2.lpc.html
+++ b/mp2/db/mp2.lpc.html
@@ -16,7 +16,55 @@
 <TH>Output only Bidir</TH>
 </TR>
 <TR >
-<TD >datapath_inst|mdrOutModifier</TD>
+<TD >cache_inst|datapath</TD>
+<TD >163</TD>
+<TD >160</TD>
+<TD >163</TD>
+<TD >160</TD>
+<TD >160</TD>
+<TD >160</TD>
+<TD >160</TD>
+<TD >160</TD>
+<TD >0</TD>
+<TD >0</TD>
+<TD >0</TD>
+<TD >0</TD>
+<TD >0</TD>
+</TR>
+<TR >
+<TD >cache_inst|control</TD>
+<TD >4</TD>
+<TD >3</TD>
+<TD >4</TD>
+<TD >3</TD>
+<TD >3</TD>
+<TD >3</TD>
+<TD >3</TD>
+<TD >3</TD>
+<TD >0</TD>
+<TD >0</TD>
+<TD >0</TD>
+<TD >0</TD>
+<TD >0</TD>
+</TR>
+<TR >
+<TD >cache_inst</TD>
+<TD >166</TD>
+<TD >0</TD>
+<TD >0</TD>
+<TD >0</TD>
+<TD >163</TD>
+<TD >0</TD>
+<TD >0</TD>
+<TD >0</TD>
+<TD >0</TD>
+<TD >0</TD>
+<TD >0</TD>
+<TD >0</TD>
+<TD >0</TD>
+</TR>
+<TR >
+<TD >cpu_inst|datapath|mdrOutModifier</TD>
 <TD >66</TD>
 <TD >32</TD>
 <TD >0</TD>
@@ -32,7 +80,7 @@
 <TD >0</TD>
 </TR>
 <TR >
-<TD >datapath_inst|MDR</TD>
+<TD >cpu_inst|datapath|MDR</TD>
 <TD >18</TD>
 <TD >0</TD>
 <TD >0</TD>
@@ -48,7 +96,7 @@
 <TD >0</TD>
 </TR>
 <TR >
-<TD >datapath_inst|mdrmux</TD>
+<TD >cpu_inst|datapath|mdrmux</TD>
 <TD >33</TD>
 <TD >0</TD>
 <TD >0</TD>
@@ -64,7 +112,7 @@
 <TD >0</TD>
 </TR>
 <TR >
-<TD >datapath_inst|mdrInModifier</TD>
+<TD >cpu_inst|datapath|mdrInModifier</TD>
 <TD >66</TD>
 <TD >32</TD>
 <TD >0</TD>
@@ -80,7 +128,7 @@
 <TD >0</TD>
 </TR>
 <TR >
-<TD >datapath_inst|MAR</TD>
+<TD >cpu_inst|datapath|MAR</TD>
 <TD >18</TD>
 <TD >0</TD>
 <TD >0</TD>
@@ -96,7 +144,7 @@
 <TD >0</TD>
 </TR>
 <TR >
-<TD >datapath_inst|marmux</TD>
+<TD >cpu_inst|datapath|marmux</TD>
 <TD >66</TD>
 <TD >8</TD>
 <TD >0</TD>
@@ -112,7 +160,7 @@
 <TD >0</TD>
 </TR>
 <TR >
-<TD >datapath_inst|cccomp_inst</TD>
+<TD >cpu_inst|datapath|cccomp_inst</TD>
 <TD >6</TD>
 <TD >0</TD>
 <TD >0</TD>
@@ -128,7 +176,7 @@
 <TD >0</TD>
 </TR>
 <TR >
-<TD >datapath_inst|cc</TD>
+<TD >cpu_inst|datapath|cc</TD>
 <TD >5</TD>
 <TD >0</TD>
 <TD >0</TD>
@@ -144,7 +192,7 @@
 <TD >0</TD>
 </TR>
 <TR >
-<TD >datapath_inst|gencc_inst</TD>
+<TD >cpu_inst|datapath|gencc_inst</TD>
 <TD >16</TD>
 <TD >0</TD>
 <TD >0</TD>
@@ -160,7 +208,7 @@
 <TD >0</TD>
 </TR>
 <TR >
-<TD >datapath_inst|alu_inst</TD>
+<TD >cpu_inst|datapath|alu_inst</TD>
 <TD >36</TD>
 <TD >0</TD>
 <TD >0</TD>
@@ -176,7 +224,7 @@
 <TD >0</TD>
 </TR>
 <TR >
-<TD >datapath_inst|alumux</TD>
+<TD >cpu_inst|datapath|alumux</TD>
 <TD >66</TD>
 <TD >12</TD>
 <TD >0</TD>
@@ -192,7 +240,7 @@
 <TD >0</TD>
 </TR>
 <TR >
-<TD >datapath_inst|regfilemux</TD>
+<TD >cpu_inst|datapath|regfilemux</TD>
 <TD >66</TD>
 <TD >0</TD>
 <TD >0</TD>
@@ -208,7 +256,7 @@
 <TD >0</TD>
 </TR>
 <TR >
-<TD >datapath_inst|regfile_inst</TD>
+<TD >cpu_inst|datapath|regfile_inst</TD>
 <TD >27</TD>
 <TD >0</TD>
 <TD >0</TD>
@@ -224,7 +272,7 @@
 <TD >0</TD>
 </TR>
 <TR >
-<TD >datapath_inst|offset6_adjuster</TD>
+<TD >cpu_inst|datapath|offset6_adjuster</TD>
 <TD >7</TD>
 <TD >0</TD>
 <TD >0</TD>
@@ -240,7 +288,7 @@
 <TD >0</TD>
 </TR>
 <TR >
-<TD >datapath_inst|drmux</TD>
+<TD >cpu_inst|datapath|drmux</TD>
 <TD >7</TD>
 <TD >3</TD>
 <TD >0</TD>
@@ -256,7 +304,7 @@
 <TD >0</TD>
 </TR>
 <TR >
-<TD >datapath_inst|storemux</TD>
+<TD >cpu_inst|datapath|storemux</TD>
 <TD >7</TD>
 <TD >0</TD>
 <TD >0</TD>
@@ -272,7 +320,7 @@
 <TD >0</TD>
 </TR>
 <TR >
-<TD >datapath_inst|IR</TD>
+<TD >cpu_inst|datapath|IR</TD>
 <TD >18</TD>
 <TD >0</TD>
 <TD >0</TD>
@@ -288,7 +336,7 @@
 <TD >0</TD>
 </TR>
 <TR >
-<TD >datapath_inst|offset11_adjuster</TD>
+<TD >cpu_inst|datapath|offset11_adjuster</TD>
 <TD >12</TD>
 <TD >1</TD>
 <TD >0</TD>
@@ -304,7 +352,7 @@
 <TD >0</TD>
 </TR>
 <TR >
-<TD >datapath_inst|offset9_adjuster</TD>
+<TD >cpu_inst|datapath|offset9_adjuster</TD>
 <TD >10</TD>
 <TD >1</TD>
 <TD >0</TD>
@@ -320,7 +368,7 @@
 <TD >0</TD>
 </TR>
 <TR >
-<TD >datapath_inst|addrmux</TD>
+<TD >cpu_inst|datapath|addrmux</TD>
 <TD >33</TD>
 <TD >0</TD>
 <TD >0</TD>
@@ -336,7 +384,7 @@
 <TD >0</TD>
 </TR>
 <TR >
-<TD >datapath_inst|br_adder</TD>
+<TD >cpu_inst|datapath|br_adder</TD>
 <TD >32</TD>
 <TD >0</TD>
 <TD >0</TD>
@@ -352,7 +400,7 @@
 <TD >0</TD>
 </TR>
 <TR >
-<TD >datapath_inst|pcPlus2</TD>
+<TD >cpu_inst|datapath|pcPlus2</TD>
 <TD >16</TD>
 <TD >0</TD>
 <TD >0</TD>
@@ -368,7 +416,7 @@
 <TD >0</TD>
 </TR>
 <TR >
-<TD >datapath_inst|pcmux</TD>
+<TD >cpu_inst|datapath|pcmux</TD>
 <TD >66</TD>
 <TD >0</TD>
 <TD >0</TD>
@@ -384,7 +432,7 @@
 <TD >0</TD>
 </TR>
 <TR >
-<TD >datapath_inst|pc</TD>
+<TD >cpu_inst|datapath|pc</TD>
 <TD >18</TD>
 <TD >0</TD>
 <TD >0</TD>
@@ -400,7 +448,7 @@
 <TD >0</TD>
 </TR>
 <TR >
-<TD >datapath_inst</TD>
+<TD >cpu_inst|datapath</TD>
 <TD >44</TD>
 <TD >0</TD>
 <TD >0</TD>
@@ -416,7 +464,7 @@
 <TD >0</TD>
 </TR>
 <TR >
-<TD >control_inst</TD>
+<TD >cpu_inst|control</TD>
 <TD >11</TD>
 <TD >1</TD>
 <TD >0</TD>
@@ -425,6 +473,22 @@
 <TD >1</TD>
 <TD >1</TD>
 <TD >1</TD>
+<TD >0</TD>
+<TD >0</TD>
+<TD >0</TD>
+<TD >0</TD>
+<TD >0</TD>
+</TR>
+<TR >
+<TD >cpu_inst</TD>
+<TD >18</TD>
+<TD >0</TD>
+<TD >0</TD>
+<TD >0</TD>
+<TD >36</TD>
+<TD >0</TD>
+<TD >0</TD>
+<TD >0</TD>
 <TD >0</TD>
 <TD >0</TD>
 <TD >0</TD>
