--- a/mp2/db/mp2.lpc.html
+++ b/mp2/db/mp2.lpc.html
@@ -16,63 +16,15 @@
 <TH>Output only Bidir</TH>
 </TR>
 <TR >
-<TD >cache_inst|datapath</TD>
-<TD >163</TD>
-<TD >160</TD>
-<TD >163</TD>
-<TD >160</TD>
-<TD >160</TD>
-<TD >160</TD>
-<TD >160</TD>
-<TD >160</TD>
-<TD >0</TD>
-<TD >0</TD>
-<TD >0</TD>
-<TD >0</TD>
-<TD >0</TD>
-</TR>
-<TR >
-<TD >cache_inst|control</TD>
-<TD >4</TD>
-<TD >3</TD>
-<TD >4</TD>
-<TD >3</TD>
-<TD >3</TD>
-<TD >3</TD>
-<TD >3</TD>
-<TD >3</TD>
-<TD >0</TD>
-<TD >0</TD>
-<TD >0</TD>
-<TD >0</TD>
-<TD >0</TD>
-</TR>
-<TR >
-<TD >cache_inst</TD>
-<TD >166</TD>
-<TD >0</TD>
-<TD >0</TD>
-<TD >0</TD>
-<TD >163</TD>
-<TD >0</TD>
-<TD >0</TD>
-<TD >0</TD>
-<TD >0</TD>
-<TD >0</TD>
-<TD >0</TD>
-<TD >0</TD>
-<TD >0</TD>
-</TR>
-<TR >
-<TD >cpu_inst|datapath|mdrOutModifier</TD>
+<TD >module_instant_loop[7].writelogic_lowbyte</TD>
 <TD >66</TD>
-<TD >32</TD>
+<TD >48</TD>
 <TD >0</TD>
-<TD >32</TD>
+<TD >48</TD>
 <TD >16</TD>
-<TD >32</TD>
-<TD >32</TD>
-<TD >32</TD>
+<TD >48</TD>
+<TD >48</TD>
+<TD >48</TD>
 <TD >0</TD>
 <TD >0</TD>
 <TD >0</TD>
@@ -80,47 +32,15 @@
 <TD >0</TD>
 </TR>
 <TR >
-<TD >cpu_inst|datapath|MDR</TD>
-<TD >18</TD>
-<TD >0</TD>
-<TD >0</TD>
-<TD >0</TD>
-<TD >16</TD>
-<TD >0</TD>
-<TD >0</TD>
-<TD >0</TD>
-<TD >0</TD>
-<TD >0</TD>
-<TD >0</TD>
-<TD >0</TD>
-<TD >0</TD>
-</TR>
-<TR >
-<TD >cpu_inst|datapath|mdrmux</TD>
-<TD >33</TD>
-<TD >0</TD>
-<TD >0</TD>
-<TD >0</TD>
-<TD >16</TD>
-<TD >0</TD>
-<TD >0</TD>
-<TD >0</TD>
-<TD >0</TD>
-<TD >0</TD>
-<TD >0</TD>
-<TD >0</TD>
-<TD >0</TD>
-</TR>
-<TR >
-<TD >cpu_inst|datapath|mdrInModifier</TD>
+<TD >module_instant_loop[7].writelogic_highbyte</TD>
 <TD >66</TD>
-<TD >32</TD>
+<TD >48</TD>
 <TD >0</TD>
-<TD >32</TD>
+<TD >48</TD>
 <TD >16</TD>
-<TD >32</TD>
-<TD >32</TD>
-<TD >32</TD>
+<TD >48</TD>
+<TD >48</TD>
+<TD >48</TD>
 <TD >0</TD>
 <TD >0</TD>
 <TD >0</TD>
@@ -128,364 +48,236 @@
 <TD >0</TD>
 </TR>
 <TR >
-<TD >cpu_inst|datapath|MAR</TD>
-<TD >18</TD>
-<TD >0</TD>
-<TD >0</TD>
-<TD >0</TD>
-<TD >16</TD>
-<TD >0</TD>
-<TD >0</TD>
-<TD >0</TD>
-<TD >0</TD>
-<TD >0</TD>
-<TD >0</TD>
-<TD >0</TD>
-<TD >0</TD>
-</TR>
-<TR >
-<TD >cpu_inst|datapath|marmux</TD>
+<TD >module_instant_loop[6].writelogic_lowbyte</TD>
 <TD >66</TD>
+<TD >48</TD>
+<TD >0</TD>
+<TD >48</TD>
+<TD >16</TD>
+<TD >48</TD>
+<TD >48</TD>
+<TD >48</TD>
+<TD >0</TD>
+<TD >0</TD>
+<TD >0</TD>
+<TD >0</TD>
+<TD >0</TD>
+</TR>
+<TR >
+<TD >module_instant_loop[6].writelogic_highbyte</TD>
+<TD >66</TD>
+<TD >48</TD>
+<TD >0</TD>
+<TD >48</TD>
+<TD >16</TD>
+<TD >48</TD>
+<TD >48</TD>
+<TD >48</TD>
+<TD >0</TD>
+<TD >0</TD>
+<TD >0</TD>
+<TD >0</TD>
+<TD >0</TD>
+</TR>
+<TR >
+<TD >module_instant_loop[5].writelogic_lowbyte</TD>
+<TD >66</TD>
+<TD >48</TD>
+<TD >0</TD>
+<TD >48</TD>
+<TD >16</TD>
+<TD >48</TD>
+<TD >48</TD>
+<TD >48</TD>
+<TD >0</TD>
+<TD >0</TD>
+<TD >0</TD>
+<TD >0</TD>
+<TD >0</TD>
+</TR>
+<TR >
+<TD >module_instant_loop[5].writelogic_highbyte</TD>
+<TD >66</TD>
+<TD >48</TD>
+<TD >0</TD>
+<TD >48</TD>
+<TD >16</TD>
+<TD >48</TD>
+<TD >48</TD>
+<TD >48</TD>
+<TD >0</TD>
+<TD >0</TD>
+<TD >0</TD>
+<TD >0</TD>
+<TD >0</TD>
+</TR>
+<TR >
+<TD >module_instant_loop[4].writelogic_lowbyte</TD>
+<TD >66</TD>
+<TD >48</TD>
+<TD >0</TD>
+<TD >48</TD>
+<TD >16</TD>
+<TD >48</TD>
+<TD >48</TD>
+<TD >48</TD>
+<TD >0</TD>
+<TD >0</TD>
+<TD >0</TD>
+<TD >0</TD>
+<TD >0</TD>
+</TR>
+<TR >
+<TD >module_instant_loop[4].writelogic_highbyte</TD>
+<TD >66</TD>
+<TD >48</TD>
+<TD >0</TD>
+<TD >48</TD>
+<TD >16</TD>
+<TD >48</TD>
+<TD >48</TD>
+<TD >48</TD>
+<TD >0</TD>
+<TD >0</TD>
+<TD >0</TD>
+<TD >0</TD>
+<TD >0</TD>
+</TR>
+<TR >
+<TD >module_instant_loop[3].writelogic_lowbyte</TD>
+<TD >66</TD>
+<TD >48</TD>
+<TD >0</TD>
+<TD >48</TD>
+<TD >16</TD>
+<TD >48</TD>
+<TD >48</TD>
+<TD >48</TD>
+<TD >0</TD>
+<TD >0</TD>
+<TD >0</TD>
+<TD >0</TD>
+<TD >0</TD>
+</TR>
+<TR >
+<TD >module_instant_loop[3].writelogic_highbyte</TD>
+<TD >66</TD>
+<TD >48</TD>
+<TD >0</TD>
+<TD >48</TD>
+<TD >16</TD>
+<TD >48</TD>
+<TD >48</TD>
+<TD >48</TD>
+<TD >0</TD>
+<TD >0</TD>
+<TD >0</TD>
+<TD >0</TD>
+<TD >0</TD>
+</TR>
+<TR >
+<TD >module_instant_loop[2].writelogic_lowbyte</TD>
+<TD >66</TD>
+<TD >48</TD>
+<TD >0</TD>
+<TD >48</TD>
+<TD >16</TD>
+<TD >48</TD>
+<TD >48</TD>
+<TD >48</TD>
+<TD >0</TD>
+<TD >0</TD>
+<TD >0</TD>
+<TD >0</TD>
+<TD >0</TD>
+</TR>
+<TR >
+<TD >module_instant_loop[2].writelogic_highbyte</TD>
+<TD >66</TD>
+<TD >48</TD>
+<TD >0</TD>
+<TD >48</TD>
+<TD >16</TD>
+<TD >48</TD>
+<TD >48</TD>
+<TD >48</TD>
+<TD >0</TD>
+<TD >0</TD>
+<TD >0</TD>
+<TD >0</TD>
+<TD >0</TD>
+</TR>
+<TR >
+<TD >module_instant_loop[1].writelogic_lowbyte</TD>
+<TD >66</TD>
+<TD >48</TD>
+<TD >0</TD>
+<TD >48</TD>
+<TD >16</TD>
+<TD >48</TD>
+<TD >48</TD>
+<TD >48</TD>
+<TD >0</TD>
+<TD >0</TD>
+<TD >0</TD>
+<TD >0</TD>
+<TD >0</TD>
+</TR>
+<TR >
+<TD >module_instant_loop[1].writelogic_highbyte</TD>
+<TD >66</TD>
+<TD >48</TD>
+<TD >0</TD>
+<TD >48</TD>
+<TD >16</TD>
+<TD >48</TD>
+<TD >48</TD>
+<TD >48</TD>
+<TD >0</TD>
+<TD >0</TD>
+<TD >0</TD>
+<TD >0</TD>
+<TD >0</TD>
+</TR>
+<TR >
+<TD >module_instant_loop[0].writelogic_lowbyte</TD>
+<TD >66</TD>
+<TD >48</TD>
+<TD >0</TD>
+<TD >48</TD>
+<TD >16</TD>
+<TD >48</TD>
+<TD >48</TD>
+<TD >48</TD>
+<TD >0</TD>
+<TD >0</TD>
+<TD >0</TD>
+<TD >0</TD>
+<TD >0</TD>
+</TR>
+<TR >
+<TD >module_instant_loop[0].writelogic_highbyte</TD>
+<TD >66</TD>
+<TD >48</TD>
+<TD >0</TD>
+<TD >48</TD>
+<TD >16</TD>
+<TD >48</TD>
+<TD >48</TD>
+<TD >48</TD>
+<TD >0</TD>
+<TD >0</TD>
+<TD >0</TD>
+<TD >0</TD>
+<TD >0</TD>
+</TR>
+<TR >
+<TD >decoder3_inst</TD>
+<TD >3</TD>
+<TD >0</TD>
+<TD >0</TD>
+<TD >0</TD>
 <TD >8</TD>
-<TD >0</TD>
-<TD >8</TD>
-<TD >16</TD>
-<TD >8</TD>
-<TD >8</TD>
-<TD >8</TD>
-<TD >0</TD>
-<TD >0</TD>
-<TD >0</TD>
-<TD >0</TD>
-<TD >0</TD>
-</TR>
-<TR >
-<TD >cpu_inst|datapath|cccomp_inst</TD>
-<TD >6</TD>
-<TD >0</TD>
-<TD >0</TD>
-<TD >0</TD>
-<TD >1</TD>
-<TD >0</TD>
-<TD >0</TD>
-<TD >0</TD>
-<TD >0</TD>
-<TD >0</TD>
-<TD >0</TD>
-<TD >0</TD>
-<TD >0</TD>
-</TR>
-<TR >
-<TD >cpu_inst|datapath|cc</TD>
-<TD >5</TD>
-<TD >0</TD>
-<TD >0</TD>
-<TD >0</TD>
-<TD >3</TD>
-<TD >0</TD>
-<TD >0</TD>
-<TD >0</TD>
-<TD >0</TD>
-<TD >0</TD>
-<TD >0</TD>
-<TD >0</TD>
-<TD >0</TD>
-</TR>
-<TR >
-<TD >cpu_inst|datapath|gencc_inst</TD>
-<TD >16</TD>
-<TD >0</TD>
-<TD >0</TD>
-<TD >0</TD>
-<TD >3</TD>
-<TD >0</TD>
-<TD >0</TD>
-<TD >0</TD>
-<TD >0</TD>
-<TD >0</TD>
-<TD >0</TD>
-<TD >0</TD>
-<TD >0</TD>
-</TR>
-<TR >
-<TD >cpu_inst|datapath|alu_inst</TD>
-<TD >36</TD>
-<TD >0</TD>
-<TD >0</TD>
-<TD >0</TD>
-<TD >16</TD>
-<TD >0</TD>
-<TD >0</TD>
-<TD >0</TD>
-<TD >0</TD>
-<TD >0</TD>
-<TD >0</TD>
-<TD >0</TD>
-<TD >0</TD>
-</TR>
-<TR >
-<TD >cpu_inst|datapath|alumux</TD>
-<TD >66</TD>
-<TD >12</TD>
-<TD >0</TD>
-<TD >12</TD>
-<TD >16</TD>
-<TD >12</TD>
-<TD >12</TD>
-<TD >12</TD>
-<TD >0</TD>
-<TD >0</TD>
-<TD >0</TD>
-<TD >0</TD>
-<TD >0</TD>
-</TR>
-<TR >
-<TD >cpu_inst|datapath|regfilemux</TD>
-<TD >66</TD>
-<TD >0</TD>
-<TD >0</TD>
-<TD >0</TD>
-<TD >16</TD>
-<TD >0</TD>
-<TD >0</TD>
-<TD >0</TD>
-<TD >0</TD>
-<TD >0</TD>
-<TD >0</TD>
-<TD >0</TD>
-<TD >0</TD>
-</TR>
-<TR >
-<TD >cpu_inst|datapath|regfile_inst</TD>
-<TD >27</TD>
-<TD >0</TD>
-<TD >0</TD>
-<TD >0</TD>
-<TD >32</TD>
-<TD >0</TD>
-<TD >0</TD>
-<TD >0</TD>
-<TD >0</TD>
-<TD >0</TD>
-<TD >0</TD>
-<TD >0</TD>
-<TD >0</TD>
-</TR>
-<TR >
-<TD >cpu_inst|datapath|offset6_adjuster</TD>
-<TD >7</TD>
-<TD >0</TD>
-<TD >0</TD>
-<TD >0</TD>
-<TD >16</TD>
-<TD >0</TD>
-<TD >0</TD>
-<TD >0</TD>
-<TD >0</TD>
-<TD >0</TD>
-<TD >0</TD>
-<TD >0</TD>
-<TD >0</TD>
-</TR>
-<TR >
-<TD >cpu_inst|datapath|drmux</TD>
-<TD >7</TD>
-<TD >3</TD>
-<TD >0</TD>
-<TD >3</TD>
-<TD >3</TD>
-<TD >3</TD>
-<TD >3</TD>
-<TD >3</TD>
-<TD >0</TD>
-<TD >0</TD>
-<TD >0</TD>
-<TD >0</TD>
-<TD >0</TD>
-</TR>
-<TR >
-<TD >cpu_inst|datapath|storemux</TD>
-<TD >7</TD>
-<TD >0</TD>
-<TD >0</TD>
-<TD >0</TD>
-<TD >3</TD>
-<TD >0</TD>
-<TD >0</TD>
-<TD >0</TD>
-<TD >0</TD>
-<TD >0</TD>
-<TD >0</TD>
-<TD >0</TD>
-<TD >0</TD>
-</TR>
-<TR >
-<TD >cpu_inst|datapath|IR</TD>
-<TD >18</TD>
-<TD >0</TD>
-<TD >0</TD>
-<TD >0</TD>
-<TD >59</TD>
-<TD >0</TD>
-<TD >0</TD>
-<TD >0</TD>
-<TD >0</TD>
-<TD >0</TD>
-<TD >0</TD>
-<TD >0</TD>
-<TD >0</TD>
-</TR>
-<TR >
-<TD >cpu_inst|datapath|offset11_adjuster</TD>
-<TD >12</TD>
-<TD >1</TD>
-<TD >0</TD>
-<TD >1</TD>
-<TD >16</TD>
-<TD >1</TD>
-<TD >1</TD>
-<TD >1</TD>
-<TD >0</TD>
-<TD >0</TD>
-<TD >0</TD>
-<TD >0</TD>
-<TD >0</TD>
-</TR>
-<TR >
-<TD >cpu_inst|datapath|offset9_adjuster</TD>
-<TD >10</TD>
-<TD >1</TD>
-<TD >0</TD>
-<TD >1</TD>
-<TD >16</TD>
-<TD >1</TD>
-<TD >1</TD>
-<TD >1</TD>
-<TD >0</TD>
-<TD >0</TD>
-<TD >0</TD>
-<TD >0</TD>
-<TD >0</TD>
-</TR>
-<TR >
-<TD >cpu_inst|datapath|addrmux</TD>
-<TD >33</TD>
-<TD >0</TD>
-<TD >0</TD>
-<TD >0</TD>
-<TD >16</TD>
-<TD >0</TD>
-<TD >0</TD>
-<TD >0</TD>
-<TD >0</TD>
-<TD >0</TD>
-<TD >0</TD>
-<TD >0</TD>
-<TD >0</TD>
-</TR>
-<TR >
-<TD >cpu_inst|datapath|br_adder</TD>
-<TD >32</TD>
-<TD >0</TD>
-<TD >0</TD>
-<TD >0</TD>
-<TD >16</TD>
-<TD >0</TD>
-<TD >0</TD>
-<TD >0</TD>
-<TD >0</TD>
-<TD >0</TD>
-<TD >0</TD>
-<TD >0</TD>
-<TD >0</TD>
-</TR>
-<TR >
-<TD >cpu_inst|datapath|pcPlus2</TD>
-<TD >16</TD>
-<TD >0</TD>
-<TD >0</TD>
-<TD >0</TD>
-<TD >16</TD>
-<TD >0</TD>
-<TD >0</TD>
-<TD >0</TD>
-<TD >0</TD>
-<TD >0</TD>
-<TD >0</TD>
-<TD >0</TD>
-<TD >0</TD>
-</TR>
-<TR >
-<TD >cpu_inst|datapath|pcmux</TD>
-<TD >66</TD>
-<TD >0</TD>
-<TD >0</TD>
-<TD >0</TD>
-<TD >16</TD>
-<TD >0</TD>
-<TD >0</TD>
-<TD >0</TD>
-<TD >0</TD>
-<TD >0</TD>
-<TD >0</TD>
-<TD >0</TD>
-<TD >0</TD>
-</TR>
-<TR >
-<TD >cpu_inst|datapath|pc</TD>
-<TD >18</TD>
-<TD >0</TD>
-<TD >0</TD>
-<TD >0</TD>
-<TD >16</TD>
-<TD >0</TD>
-<TD >0</TD>
-<TD >0</TD>
-<TD >0</TD>
-<TD >0</TD>
-<TD >0</TD>
-<TD >0</TD>
-<TD >0</TD>
-</TR>
-<TR >
-<TD >cpu_inst|datapath</TD>
-<TD >44</TD>
-<TD >0</TD>
-<TD >0</TD>
-<TD >0</TD>
-<TD >40</TD>
-<TD >0</TD>
-<TD >0</TD>
-<TD >0</TD>
-<TD >0</TD>
-<TD >0</TD>
-<TD >0</TD>
-<TD >0</TD>
-<TD >0</TD>
-</TR>
-<TR >
-<TD >cpu_inst|control</TD>
-<TD >11</TD>
-<TD >1</TD>
-<TD >0</TD>
-<TD >1</TD>
-<TD >31</TD>
-<TD >1</TD>
-<TD >1</TD>
-<TD >1</TD>
-<TD >0</TD>
-<TD >0</TD>
-<TD >0</TD>
-<TD >0</TD>
-<TD >0</TD>
-</TR>
-<TR >
-<TD >cpu_inst</TD>
-<TD >18</TD>
-<TD >0</TD>
-<TD >0</TD>
-<TD >0</TD>
-<TD >36</TD>
 <TD >0</TD>
 <TD >0</TD>
 <TD >0</TD>
